# gittok

./: .gitignore  ARCHITECTURE.md  AUTHENTICATION_FIX.md  CLERK_GITHUB_OAUTH_FIX.md  CLERK_SETUP.md  CREATE_GITHUB_OAUTH.txt  FEATURES.md  FINAL_AUTH_FIX.md  FIX_404_ERROR.md  GOOGLE_VEO_SETUP.md  NEON_DATABASE_SETUP.md  PERSONALIZED_FEEDS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_FIX_OAUTH.md  README.md  SETUP.md  SETUP_COMPLETE.md  VIDEO_PROVIDERS.md  WHATS_NEW.md  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  render.yaml  setup-auth.sh
app/: globals.css  layout.tsx  page.tsx
app/api/search/: route.ts
app/api/trending/: route.ts
app/auth/signin/: page.tsx
app/discover/: page.tsx
app/feed/: page.tsx
app/following/: page.tsx
app/language/[lang]/: page.tsx
app/search/: page.tsx
app/settings/: page.tsx
app/sign-in/[[...sign-in]]/: page.tsx
app/sign-up/[[...sign-up]]/: page.tsx
app/trending/: page.tsx
app/video/: page.tsx
backend/: README.md  pyproject.toml
backend/server/: main.py
backend/server/api/: router.py
backend/server/core/: config.py  database.py  models.py  schemas.py
backend/server/services/: feeds.py  github.py  slides.py  speech.py
components/: AuthButton.tsx  DiscoverCard.tsx  DiscoverFeed.tsx  Header.tsx  LanguageFilter.tsx  RepoCard.tsx  RepoFeed.tsx  ShareButton.tsx  SlideshowPlayer.tsx  VideoRepoCard.tsx  VideoRepoFeed.tsx
lib/: appSettings.ts  backend.ts  frontendApi.ts  github.ts  personalizedFeed.ts  videoGeneration.ts
prisma/: schema.prisma
types/: repository.ts
(+7 files in other folders)
